//
//    Copyright 2019 The Proteus Authors
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        http://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.
syntax = "proto3";

package io.netifi.proteus.tracing;

import "zipkin/proto3/zipkin.proto";
import "google/protobuf/empty.proto";

option java_package = "io.netifi.proteus.tracing";
option java_outer_classname = "ProteusTracingServices";
option java_multiple_files = true;

message Ack {}

message Trace {
    repeated zipkin.proto3.Span spans = 1;
}

message Traces {
    repeated Trace traces = 1;
}

message TracesRequest {
    int32 lookbackSeconds = 1;
}

service ProteusTracingService {

    rpc StreamSpans (stream zipkin.proto3.Span) returns (Ack) {}
}
